# cxx-nanopack

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  conanfile.txt
examples/cxx/benchmark/: CMakeLists.txt  main.cxx  person.np.cxx  person.np.hxx
examples/cxx/inheritance/: CMakeLists.txt  main.cxx  nanopack_message_factory.cxx  nanopack_message_factory.hxx  text.np.cxx  text.np.hxx  text.yaml  widget.np.cxx  widget.np.hxx
examples/cxx/simple/: CMakeLists.txt  main.cxx  person.np.cxx  person.np.hxx  person.yaml
examples/simple/: main.cxx  person.np.cxx  person.np.hxx  person.yaml
examples/swift/benchmark/: Package.resolved  Package.swift
examples/swift/benchmark/Sources/: Person.np.swift  main.swift
examples/swift/inheritance/: Package.resolved  Package.swift
examples/swift/inheritance/Sources/: NanoPackMessageFactory.swift  Text.np.swift  Widget.np.swift  main.swift
examples/swift/simple/: Package.resolved  Package.swift
examples/swift/simple/Sources/: Person.np.swift  main.swift  person.yaml
examples/ts/inheritance/: package-lock.json  package.json  tsconfig.json
examples/ts/inheritance/src/: main.ts  make-widget.np.ts  message-factory.ts  text.np.ts  widget.np.ts  widget.yaml
examples/ts/simple/: README.md  bun.lockb  package-lock.json  package.json
examples/ts/simple/src/: index.ts  main.ts  person.np.ts  person.yaml
include/nanopack/: any.hxx  message.hxx  message_stream.hxx  nanobuf.hxx  nanopack.hxx  reader.hxx  writer.hxx
nanoc/: CMakeLists.txt
nanoc/src/: data_types.hxx  main.cxx  message_schema.cxx  message_schema.hxx
nanoc/src/data_type/: data_type.hxx  np_array.cxx  np_array.hxx  np_bool.cxx  np_bool.hxx  np_double.cxx  np_double.hxx  np_int32.cxx  np_int32.hxx  np_int64.cxx  np_int64.hxx  np_int8.cxx  np_int8.hxx  np_map.cxx  np_map.hxx  np_message.cxx  np_message.hxx  np_optional.cxx  np_optional.hxx  np_string.cxx  np_string.hxx  type_factory.cxx  type_factory.hxx
nanoc/src/generator/: code_output.cxx  code_output.hxx  cxx_generator.cxx  cxx_generator.hxx  data_type_code_generator.cxx  data_type_code_generator.hxx  generator.hxx
nanoc/src/generator/cxx/: cxx_array_generator.cxx  cxx_array_generator.hxx  cxx_bool_generator.cxx  cxx_bool_generator.hxx  cxx_double_generator.cxx  cxx_double_generator.hxx  cxx_generator.cxx  cxx_generator.hxx  cxx_int32_generator.cxx  cxx_int32_generator.hxx  cxx_int64_generator.cxx  cxx_int64_generator.hxx  cxx_int8_generator.cxx  cxx_int8_generator.hxx  cxx_map_generator.cxx  cxx_map_generator.hxx  cxx_message_generator.cxx  cxx_message_generator.hxx  cxx_optional_generator.cxx  cxx_optional_generator.hxx  cxx_string_generator.cxx  cxx_string_generator.hxx
nanoc/src/generator/swift/: swift_array_generator.cxx  swift_array_generator.hxx  swift_bool_generator.cxx  swift_bool_generator.hxx  swift_double_generator.cxx  swift_double_generator.hxx  swift_generator.cxx  swift_generator.hxx  swift_int32_generator.cxx  swift_int32_generator.hxx  swift_int64_generator.cxx  swift_int64_generator.hxx  swift_int8_generator.cxx  swift_int8_generator.hxx  swift_map_generator.cxx  swift_map_generator.hxx  swift_message_generator.cxx  swift_message_generator.hxx  swift_optional_generator.cxx  swift_optional_generator.hxx  swift_string_generator.cxx  swift_string_generator.hxx
nanoc/src/generator/ts/: ts_array_generator.cxx  ts_array_generator.hxx  ts_bool_generator.cxx  ts_bool_generator.hxx  ts_generator.cxx  ts_generator.hxx  ts_int32_generator.cxx  ts_int32_generator.hxx  ts_int64_generator.cxx  ts_int64_generator.hxx  ts_int8_generator.cxx  ts_int8_generator.hxx  ts_map_generator.cxx  ts_map_generator.hxx  ts_message_generator.cxx  ts_message_generator.hxx  ts_optional_generator.cxx  ts_optional_generator.hxx  ts_string_generator.cxx  ts_string_generator.hxx
nanoc/src/parser/: parse_result.cxx  parse_result.hxx  parse_schema.cxx  parse_schema.hxx  symbols.hxx  type_factory.cxx  type_factory.hxx
nanoc/src/resolver/: resolve_schemas.cxx  resolve_schemas.hxx
nanoc/src/string_util/: case_conv.cxx  case_conv.hxx
src/: any.cxx  message_stream.cxx  reader.cxx  writer.cxx
src/nanobuf/: nanobuf.cxx
